# sttk-documentation

./: .gitignore  404.html  README.md  index.html  pyproject.toml  sitemap.xml
about/: index.html
api-reference/data/yfdownload/: index.html
api-reference/library-overview/: index.html
api-reference/overview/: index.html
api-reference/researchtools/csvinspector/: index.html
contribute/cicd/: index.html
documentation/charting-tool/module-walkthrough/: index.html
documentation/charting-tool/overview-and-usage/: index.html
documentation/jupyter-research-tools/csv-high-low-bar-plotter/: index.html
documentation/jupyter-research-tools/csv-inspector/: index.html
documentation/overview/: index.html
education/git-basics/concept/: index.html
education/overview/: index.html
education/python-basics/overview/: index.html
event-driven-backtest/: index.html
eventdrivenbt/: index.html
getting-started/installation/: index.html
getting-started/installation/docker/: index.html
getting-started/overview/: index.html
histdata/: index.html
historical-market-data/: index.html
home/project-roadmap/: index.html
quickstart/: index.html
quickstart-guide/: index.html
research/overview/: index.html
search/: search_index.json
tutorials/overview/: index.html
useful-resources/: index.html
usefulres/: index.html
vectorized-backtest/: index.html
vectorized-backtesting-engine/: index.html
vectorizedbt/: index.html
website/: mkdocs.yml
website/docs/: about.md  event-driven-backtest.md  index.md  usefulres.md  vectorized-backtest.md
(+17 files in other folders)
